src/runtime/uri.h



enum UriKind {
	UriKindRelativeOrAbsolute,
	UriKindAbsolute,
	UriKindRelative,
};


typedef void *(* System_Uri_Ctor_1) (const char *uri_string);

typedef void *(* System_Uri_Ctor_2) (const char *uri_string, UriKind uri_kind);

typedef void *(* System_Uri_Ctor_3) (const void *base_uri, const char *relative_uri);

typedef void *(* System_Uri_Ctor_4) (const void *base_uri, const void *relative_uri);

typedef char *(* System_Uri_GetStringProperty) (const void *instance);

typedef gint32 (* System_Uri_GetInt32Property) (const void *instance);

typedef bool (* System_Uri_GetBooleanProperty) (const void *instance);

typedef char *(* System_Uri_ToString) (const void *instance);

typedef bool (* System_Uri_Equals) (const void *a, const void *b);

typedef void *(* System_Uri_CloneWithScheme) (const void *instance, const char *scheme);