src/runtime/application.h



/* @CBindingRequisite */
typedef void (*GetImplicitStylesCallback)(FrameworkElement *el, ImplicitStylePropertyValueProvider::StyleMask style_mask, Style ***styles);

/* @CBindingRequisite */
typedef void (*ConvertSetterValuesCallback)(Style *style);

/* @CBindingRequisite */
typedef void *(*ConvertKeyframeValueCallback)(int kind, DependencyProperty *property, Value *original, Value *converted);

/* @CBindingRequisite */
typedef ManagedStreamCallbacks (*GetResourceCallback)(const Uri *resourceBase, const Uri *name);